# map

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
.github/scripts/: generate-tiles.sh
.github/workflows/: deploy.yml
data/: Makefile  pyproject.toml  rides.sql
data/ingestion/: pipeline.py
data/projects/: yorke-peninsula-wind-farm.geojson
data/scripts/: extract-projects.py
web/: eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
web/public/: project-points.json  style.json
web/src/: index.css  index.tsx  router.ts  routes.tsx
web/src/components/: header.tsx  icons.tsx  logo.tsx
web/src/components/map/: index.ts  layer.tsx  map.tsx  source.tsx  util.ts
web/src/components/sidebar/: sidebar-body-filter.tsx  sidebar-body-layers.tsx  sidebar.tsx
web/src/pages/: _app.tsx  index.tsx
web/src/stores/: layers-context.tsx
