[tool.poetry]
name = "net-zero-map"
version = "0.1.0"
description = ""
authors = ["angus-robertson <angus.robertson@outlook.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.0.0"
pydantic = "^2.8.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
